<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TaskActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarAddTask"
            app:title="New Task"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cool_blue"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/task_title"
        android:textColor="@color/cool_pink"
        android:textStyle="bold"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:id="@+id/titleInpLay"
        app:hintTextColor="@color/colorAccent"
        app:boxStrokeColor="@color/colorPrimary"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_task_title"
            android:paddingStart="8dp"
            android:inputType="textCapWords"
            android:paddingEnd="8dp"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/what_is_to_be_done"
        android:textColor="@color/cool_pink"
        android:textStyle="bold"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:hintTextColor="@color/colorAccent"
        app:boxStrokeColor="@color/colorPrimary"
        android:layout_marginEnd="16dp"
        android:id="@+id/taskInpLay"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_the_task"
            android:lines="3"
            android:gravity="start"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/set_remainder"
        android:textColor="@color/cool_pink"
        android:textStyle="bold"
        android:textSize="16sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:hintTextColor="@color/colorAccent"
        app:boxStrokeColor="@color/colorPrimary"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/set_date"
            android:clickable="true"
            android:id="@+id/dateEdt"
            android:cursorVisible="false"
            android:drawablePadding="8dp"
            android:drawableEnd="@drawable/ic_date_range_black_24"
            android:drawableTint="@color/cool_green"
            android:focusable="false"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:hintTextColor="@color/colorAccent"
        app:boxStrokeColor="@color/colorPrimary"
        android:visibility="gone"
        android:id="@+id/timeInptLay"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/set_time"
            android:clickable="true"
            android:id="@+id/timeEdt"
            android:cursorVisible="false"
            android:drawablePadding="8dp"
            android:drawableEnd="@drawable/ic_access_time_black_24"
            android:drawableTint="@color/cool_green"
            android:focusable="false"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textSize="18sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp">

        <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="18dp"
            android:layout_weight="1"
            android:backgroundTint="@color/cool_green"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

        <ImageView
            android:id="@+id/imgAddCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_playlist_add_black_24"
            tools:ignore="ImageContrastCheck"
            app:tint="@color/cool_green"/>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:text="@string/save_task"
        android:id="@+id/saveBtn"
        app:backgroundTint="@color/cool_blue"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_gravity="end"
        app:cornerRadius="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>